Fix some styles on home page

--- a/src/components/Account/style.module.scss
+++ b/src/components/Account/style.module.scss
@@ -23,6 +23,10 @@
     .username {
       color: #737380;
       font-size: 16px;
+
+      &:hover {
+        color: #5F6061;
+      }
     }
   }
 }
