--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -2,5 +2,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3px 27px;
+  padding: 0px 20px;
+  border: 1px solid #F2F3F5;
 }
