--- a/src/components/Login/style.module.scss
+++ b/src/components/Login/style.module.scss
@@ -1,12 +1,11 @@
 .login {
-  color: #8239F2;
-  font-size: 20px;
-  font-weight: bold;
-  min-width: 262px;
-  text-align: center;
+  a {
+    color: #8239F2;
+    font-size: 20px;
+    font-weight: bold;
 
-  &:hover {
-    color: #6A26CC;
-    cursor: pointer;
+    &:hover {
+      color: #6A26CC;
+    }
   }
 }
