--- a/src/components/SearchBar/style.module.scss
+++ b/src/components/SearchBar/style.module.scss
@@ -7,6 +7,7 @@
   padding: 0px 20px;
 
   input {
+    font-size: 16px;
     width: 100%;
     max-width: 944px;
     height: 45px;
@@ -19,5 +20,11 @@
     &:focus {
       outline: 1px solid #8239F2;
     }
+  }
+
+  .searchButton {
+    background: #8239F2;
+    min-width: 45px;
+    min-height: 45px;
   }
 }
