--- a/src/components/BookDetails/style.module.scss
+++ b/src/components/BookDetails/style.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 1400px;
   justify-self: center;
-  background: #FFFFFF;
+  background: hsl(0, 0%, 100%);
   padding: 40px;
   display: flex;
   gap: 40px;
@@ -13,5 +13,9 @@
     font-weight: bold;
     text-align: left;
     padding-bottom: 34px;
+  }
+
+  @media (max-width:768px) {
+    flex-direction: column;
   }
 }
