--- a/src/components/BookSummary/style.module.scss
+++ b/src/components/BookSummary/style.module.scss
@@ -2,6 +2,13 @@
   display: flex;
   flex-direction: column;
   gap: 6px;
+  width: 25.5%;
+  min-width: 220px;
+
+
+  @media (max-width:768px) {
+    width: 100%;
+  }
 
   .bookCover {
     width: 200px;
